fix problem with reveals obscuring adminimal admin menu on mobile devices

--- a/css/screen.css
+++ b/css/screen.css
@@ -1341,6 +1341,11 @@ body {
   top: 34px;
 }
 
+.admin-menu .slicknav_menu {
+  position: relative;
+  z-index: 1;
+}
+
 @media screen and (min-width: 768px) {
   .modal-dismiss.primary {
     position: fixed;
